--- a/index.html
+++ b/index.html
@@ -18,6 +18,9 @@
     <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
     
     <link rel="icon" href="/lovable-uploads/80e50601-d380-4ef8-927b-eefe93e6458f.png" />
+    
+    <!-- Add forceHideBadge parameter to hide Lovable badge -->
+    <meta name="lovable:forceHideBadge" content="true" />
   </head>
 
   <body>
